--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-config = "0.9"
-serde = { version = "1.0.116", features = ["derive"] }
 log = "0.4.11"
 flexi_logger = "0.15.12"
+
+config = "0.9"
+serde = { version = "1.0.116", features = ["derive"] }
+url = { version = "2.1.1", features = ["serde"] }
+
+tokio = { version = "0.2", features = ["full"] }
+warp = "0.2"
+futures = "0.3.5"
